--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,15 +13,20 @@
     <string name="customer">Customer</string>
     <string name="description">Description</string>
     <string name="add">Add</string>
+    <string name="active_tasks_list">Active Tasks</string>
+    <string name="mark_closed">Mark Closed</string>
+    <string name="trak_selected">Track Selected</string>
 
     <!-- Activities titles -->
-    <string name="title_activity_login">TACC: Login In</string>
+    <string name="title_activity_login">Login In</string>
     <string name="title_activity_items_list">ItemsList</string>
     <string name="title_activity_add_record">AddRecord</string>
     <string name="title_activity_add_tracking_item">Add Item/Ticket</string>
     <string name="title_activity_select_to_track">SelectToTrackActivity</string>
     <string name="title_activity_in_time">InTimeActivity</string>
-    <string name="title_activity_filers_items_list_slide_right">FilersItemsListSlideRightActivity</string>
+    <string name="title_activity_filters">Filters</string>
+    <string name="title_activity_push_timesheet">Timesheet</string>
+    <string name="title_activity_record_list">Records</string>
     <!-- // -->
 
 
