--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="start_time">00:00:00</string>
     <string name="play_button">Play</string>
     <string name="pause_button">Pause</string>
+    <string name="tasks_button">Tasks</string>
 
     <!-- Activities titles -->
     <string name="title_activity_login">Login In</string>
